--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "dependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.1",
     "perf_hooks": "^0.0.1",
     "yarn": "^1.22.17"
+  },
+  "scripts": {
+    "lint": "./node_modules/.bin/eslint",
+    "test": "./node_modules/mocha/bin/mocha"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
