--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "chai": "^4.3.6",
+    "commonjs": "^0.0.1",
     "mocha": "^9.2.1",
     "perf_hooks": "^0.0.1",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5",
     "yarn": "^1.22.17"
   },
   "scripts": {
