--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
     "commonjs": "^0.0.1",
     "mocha": "^9.2.1",
-    "perf_hooks": "^0.0.1",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
+    "universal-perf-hooks": "^1.0.1",
     "yarn": "^1.22.17"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register -r tsconfig-paths/register '**/test_*.ts'"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
