--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,27 @@
-// {
-//   "env": {
-//     "browser": true,
-//     "es2021": true
-//   },
-//   "extends": ["google", "prettier"],
-//   "parserOptions": {
-//     "ecmaVersion": "latest",
-//     "sourceType": "module"
-//   },
-//   "rules": {}
-// }
-
 {
-  "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true
+  },
+  "extends": ["google", "prettier", "eslint:recommended"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ]
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-undef": 0,
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": false,
+        "ignoreDeclarationSort": true,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+        "allowSeparatedGroups": true
+      }
+    ]
+  }
 }
