--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "@types/chai": "^4.3.0",
+    "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "chai": "^4.3.6",
     "commonjs": "^0.0.1",
     "eslint-plugin-import": "^2.25.4",
+    "lodash": "^4.17.21",
     "mocha": "^9.2.1",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
